# NCKU_HOMEWORK

./: .gitignore  .gitmodules  README.md
Artifical Intelligence in Medical Applications and Services/HW1/: .gitignore  README.md  logger.py  main.py
Artifical Intelligence in Medical Applications and Services/HW2/: .main.py.swp  AMD.ipynb  Intro.pptx  README.md
Artifical Intelligence in Medical Applications and Services/HW3/: DataSet.txt  logger.py  main.py
Chinese/FinalProject/: scrapy.cfg
Compiler/hw1/: .gitignore  Makefile  compiler_hw1.l  judge.conf  lex.yy.c  myscanner
Compiler/hw2/: Makefile  compiler_hw2.l  compiler_hw2.y  compiler_hw_common.h  judge.conf  lex.yy.c  myparser  out  y.output  y.tab.c  y.tab.h
Compiler/hw3/: Makefile  compiler_hw3.l  compiler_hw3.y  hw3.j  judge.conf  lex.yy.c  mycompiler  y.output  y.tab.c  y.tab.h
Computer Organization/hw1/: CS.v  report.docx  testfixture.v
Computer Organization/hw2/: CS.v
Computer Organization/hw3/: SME.v  test.v
Computer Organization/hw4/: HW4_RISCV.docx  image of computer organization CPU  report.docx
Computer Organization/hw5/: HW5_RISCV2.docx  report.docx
Computer Organization/hw6/: HW6_Cache.docx  report.docx
Data Structure/: Data_Structure_Assignment_1.c  Data_Structure_Assignment_2.c  Data_Structure_Assignment_4.c  test.sh
Data Structure/Homework1/: input0.txt  input1.txt  input2.txt
Introduction to Image Processing, Computer Vision and Deep Learning/hw1/: .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
Introduction to Image Processing, Computer Vision and Deep Learning/hw1/src/module/: display.py  gui.py  process.py
Introduction to Image Processing, Computer Vision and Deep Learning/hw2/: Makefile  pyproject.toml
Introduction to Image Processing, Computer Vision and Deep Learning/hw2-5/: .gitignore  pyproject.toml
Introduction to Image Processing, Computer Vision and Deep Learning/hw2-5/src/: main.py
Introduction to Image Processing, Computer Vision and Deep Learning/hw2-5/src/module/: gui.py  train.py
Introduction to Image Processing, Computer Vision and Deep Learning/hw2/src/module/: calibration.py  gui.py
Introduction to artifical Intelligence/hw1/src/: draw.py  function.cp37-win_amd64.pyd  input.txt  main.py  pyproject.toml  validate.py
Program Design/: 0與1的奇蹟 - Kiseki of 0 & 1.c  Addition in column form.c  Beaufort Scale.c  Combination.c  Find the Median.c  Hex to RGB Converter.c  Make a circle.c  Say hello to C.c  String Reverse.c  Symmetric Matrix.c  Triangle area.c  Wait for the class ending.c  sister's noise.c
Program Design First/: .gitignore
(+386 files in other folders)
