[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["arashi87 <arasi27676271@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.7"
PyQt5 = "^5.15.6"
opencv-python = "^4.5.4"
isort = "^5.10.1"
pylint = "^2.11.1"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
