[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["arashi87 <arasi27676271@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
opencv-python = "^4.5.4"
matplotlib = "^3.5.1"
PyQt5 = "^5.15.6"
numpy = "^1.21.5"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
bandit = "^1.7.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
