[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["arashi87 <arasi27676271@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.7.1"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
